# creatifyinterview

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
creatifyinterview/: asgi.py  settings.py  urls.py  wsgi.py
middlewares/: jwt_authenticate.py
utils/: http_utils.py
